assets/style.css
@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Teachers:ital,wght@0,400..800;1,400..800&display=swap');

body {
    font-family: "DM Sans", sans-serif;
    font-weight: 300;
    background-color: #f9f9f9;
    margin: 0;
    padding: 0;
    width: 100%;
    box-sizing: border-box;
}

/* Media query to adapt for wide screens */
@media (min-width: 960px) {
    body {
        width: 80%;
        max-width: 960px;
        margin: 0 auto;
    }
}

/* Container for main page divs: top, mid, bottom */
.page {
    display: flex;
    flex-direction: column;
    height: 100vh;
}

.top {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    background-color: #333;
    padding: 0 25px;
    height: 80px;
    border-bottom: 3px #f9f9f9 solid;
}

.left_items {
    display: flex;
    gap: 40px;
    align-items: baseline;
    font-weight: 400;
    font-size: 1.5em;
    line-height: 1.5em;
}

.left_items #h1 {
    color: #fff;
}

.left_items #h1 a {
    text-decoration: none;
    font-size: 1.5em;
    color: #fff;
}

.left_items #h2 {
    font-weight: 300;
    color: #aaa;
}

.top #links {
    display: flex;  
    height: 100%;
    align-items: center;
}

.top #links a {
    text-decoration: none;
    color: #fff;
    padding: 0 15px;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    box-sizing: border-box;
    transition: background-color 0.4s ease;
}

.top #links a:hover {
    background-color: #222;
    color: rgb(255, 100, 62);
}

.mid {
    flex-grow: 1;
    padding: 20px;
    background-color: #fff;
    color: #333;
    border-top: 4px rgb(255, 100, 62) solid;
    border-bottom: 4px rgb(255, 100, 62) solid;
}

.text_block {
    font-size: 1em;
    line-height: 1.6em;
    margin: 0 0 20px 0;
}

.text_block h2 {
    font-size: 1.5em;
    line-height: 1.8em;
    border-bottom: 1px #000 solid;
    margin: 0;
}

.text_block .content {
    padding: 0 10px 0 20px;
}

.bottom {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #333;
    padding: 0 25px;
    height: 40px;
    border-top: 3px #f9f9f9 solid;
    color: #666;
}

